# gitmaster

./: .gitignore  CMakeLists.txt  GEMINI.md  GitMaster.pro  MISSING_FEATURES.md  README.md  ROADMAP.md  build_appimage.sh  gitmaster.desktop  gitmaster.pro  gitmaster.spec  main.cpp  org.gitmaster.GitMaster.yaml  qadvplaintextedit.cpp  qadvplaintextedit.h  qexttextbrowser.cpp  qexttextbrowser.h  qgit.cpp  qgit.h  qgitblamedialog.cpp  qgitblamedialog.h  qgitblamedialog.ui  qgitbranchdialog.cpp  qgitbranchdialog.h  qgitbranchdialog.ui  qgitcleandialog.cpp  qgitcleandialog.h  qgitcleandialog.ui  qgitclonerepositorydialog.cpp  qgitclonerepositorydialog.h  qgitclonerepositorydialog.ui  qgitconflictresolverdialog.cpp  qgitconflictresolverdialog.h  qgitconflictresolverdialog.ui  qgitcreatetagdialog.cpp  qgitcreatetagdialog.h  qgitcreatetagdialog.ui  qgitdiffviewer.cpp  qgitdiffviewer.h  qgitdiffwidget.cpp  (+52 more)
combobox/: qcomboboxgitdiffoptions.cpp  qcomboboxgitdiffoptions.h  qcomboboxgitstatusfiles.cpp  qcomboboxgitstatusfiles.h  qcomboboxgitviewoptions.cpp  qcomboboxgitviewoptions.h  qcustomcombobox.cpp  qcustomcombobox.h
macos/: build.sh  build_icon.sh  gitmaster.icns
qgit/: qgit.pri
qgit/include/: qgit.h  qgitbranch.h  qgitcommit.h  qgitcommitdiff.h  qgitcommitdiffparent.h  qgitdiffbinary.h  qgitdiffbinaryfile.h  qgitdifffile.h  qgitdifffileitem.h  qgitdiffhunk.h  qgitdiffline.h  qgiterror.h  qgitsignature.h  qgittag.h  qgitworktree.h
qgit/src/: qgit.cpp  qgitbranch.cpp  qgitcommit.cpp  qgitcommitdiff.cpp  qgitcommitdiffparent.cpp  qgitdiffbinary.cpp  qgitdiffbinaryfile.cpp  qgitdifffile.cpp  qgitdifffileitem.cpp  qgitdiffhunk.cpp  qgitdiffline.cpp  qgiterror.cpp  qgitsignature.cpp  qgittag.cpp  qgitworktree.cpp  src.pro
snap/: snapcraft.yaml
windows/: build.bat  build_deps.bat  build_installer.bat  gitmaster.iss  run.bat
